IDENTIFIER-100 - Upgrade to java 17 and some other refactoring (#42)
* Upgrade to java 17 and some other refactoring

Jira IDENTIFIER-100

* Adjusting request authorization